# sshg

./: .coveragerc  LICENSE  README.md  publish.sh  pyproject.toml  sshg.py
.github/workflows/: poetry.yml
tests/: test_sshg.py
